--- a/CatiaDataImport.vbproj
+++ b/CatiaDataImport.vbproj
@@ -73,7 +73,10 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CatiaDataInjector.vb" />
     <Compile Include="CatiaSession.vb" />
+    <Compile Include="ExcelData.vb" />
+    <Compile Include="ExcelDataExtractor.vb" />
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -100,7 +103,6 @@
     </Compile>
     <Compile Include="Program.vb" />
     <Compile Include="SendToWithPartN.vb" />
-    <Compile Include="UserProperties.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Form1.resx">
