--- a/CatiaDataImport.vbproj
+++ b/CatiaDataImport.vbproj
@@ -73,6 +73,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CatiaDataCOMCleaner.vb" />
     <Compile Include="CatiaDataInjector.vb" />
     <Compile Include="CatiaSession.vb" />
     <Compile Include="ExcelData.vb" />
@@ -84,7 +85,6 @@
       <DependentUpon>Form1.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="From_Excel.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -102,7 +102,6 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="Program.vb" />
-    <Compile Include="SendToWithPartN.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Form1.resx">
