--- a/CatiaDataImport.vbproj
+++ b/CatiaDataImport.vbproj
@@ -74,10 +74,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CatiaDataCOMCleaner.vb" />
+    <Compile Include="CatiaDataExtractor.vb" />
     <Compile Include="CatiaDataInjector.vb" />
     <Compile Include="CatiaSession.vb" />
     <Compile Include="ExcelData.vb" />
     <Compile Include="ExcelDataExtractor.vb" />
+    <Compile Include="ExcelDataUpdater.vb" />
     <Compile Include="ExcelSession.vb" />
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
@@ -103,6 +105,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="Program.vb" />
+    <Compile Include="PwrProduct.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Form1.resx">
